fixed triangles being cutoff

--- a/Flying Circus/fc-r20-cs.css
+++ b/Flying Circus/fc-r20-cs.css
@@ -399,9 +399,14 @@ button.button-hide {
 	width: 0;
 	height: 0;
 	border-style: solid;
-	border-width: 20px 10px 0 10px;
+	border-width: 20px 15px 0 15px;
 	border-color: #ebedeb transparent transparent transparent;
 	background-color: white;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	padding-right: 0px;
+	padding-left: 0px;
+	line-height: 25px;
 
 }
 
@@ -413,6 +418,11 @@ button.button-reveal{
 	border-width: 10px 0 10px 20px;
 	border-color: transparent transparent transparent #888;
 	background-color: white;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	padding-right: 0px;
+	padding-left: 0px;
+	line-height: 25px;
 
 }
 
